name:                coinmetrics-tendermint
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
author:              Alexander Bich
maintainer:          quyse0@gmail.com
copyright:           (c) Coin Metrics, Inc. and contributors
category:            Cryptocurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:
    CoinMetrics.Tendermint
    CoinMetrics.Tendermint.Amino
  build-depends:
    aeson
    , avro
    , base
    , bytestring
    , cereal
    , coinmetrics
    , hanalytics-base
    , hanalytics-postgres
    , http-client
    , iso8601-time
    , protobuf
    , template-haskell
    , text
    , time
    , unordered-containers
    , vector
  ghc-options:         -Wall
  default-language:    Haskell2010
